updated font size and alignment for 1445 bug

--- a/ui.frontend/src/main/webpack/etisalat/styles/custom-components/product-cards.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/custom-components/product-cards.scss
@@ -235,7 +235,8 @@
   }
   &__price-vat {
     margin-top: $margin-step-1;
-    line-height: 1.4;
+    line-height: normal;
+    font-size: $font12;
   }
 
   &__old-price {
@@ -762,6 +763,7 @@
       }
       .product-card__price {
         @include font-family-Neotech;
+        text-align: right;
       }
     }
     // nav arrow
